# projectforge

./: .env.example  .gitignore  ARCHITECTURE.md  FRONTEND_SETUP.md  Makefile  QUICKSTART.md  README.md  STATUS_REPORT.md  check-status.sh  docker-compose.yml  package.json  pnpm-lock.yaml  setup-vm.sh  start-backend-services.sh  start-backend-simple.sh  start-dev.sh  start-services-bg.sh  turbo.json
.claude/: CLAUDE.md
.claude/agents/: ai-agents.md  architect.md  backend-go.md  backend-python.md  cicd-github.md  database.md  frontend.md  gantt-chart.md  gcp-infra.md  kanban-dnd.md  task-relations.md  terraform-gcp.md
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml
apps/ai-service/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
apps/ai-service/src/: __init__.py  config.py  database.py  main.py
apps/ai-service/src/agents/: __init__.py  base.py
apps/ai-service/src/agents/meeting_notes/: __init__.py  analyzer.py  extractor.py  prompts.py  router.py  schemas.py
apps/ai-service/src/agents/sow_parser/: __init__.py  analyzer.py  extractor.py  prompts.py  router.py  schemas.py
apps/ai-service/src/chat/: __init__.py  models.py  router.py  schemas.py  service.py
apps/ai-service/src/copilot/: __init__.py  analyzer.py  project_data.py  router.py  schemas.py  service.py
apps/ai-service/src/documents/: __init__.py  extractor.py  models.py  processor.py  repository.py  router.py  schemas.py  service.py  storage.py
apps/ai-service/src/embeddings/: __init__.py  chunker.py  service.py  vertex_client.py
apps/ai-service/src/rag/: __init__.py  prompts.py  router.py  schemas.py  service.py
apps/ai-service/tests/: conftest.py
apps/ai-service/tests/agents/: test_meeting_notes.py  test_sow_parser.py
apps/ai-service/tests/integration/: test_chat.py  test_copilot.py
apps/ai-service/tests/unit/: test_analyzer.py  test_chunker.py
apps/api-gateway/: .env.example  Dockerfile  README.md  go.mod  go.sum  main.go
apps/api-gateway/cmd/server/: main.go
apps/api-gateway/internal/client/: core_service.go
apps/api-gateway/internal/config/: config.go
apps/api-gateway/internal/firebase/: client.go
apps/api-gateway/internal/handler/: health.go  proxy.go  proxy_test.go
apps/api-gateway/internal/middleware/: auth.go  auth_test.go  cors.go  cors_test.go  logging.go  metrics.go  metrics_test.go  ratelimit.go  ratelimit_test.go  request_id.go  tenant.go  tenant_test.go
apps/api-gateway/pkg/response/: json.go
apps/core-service/: .env.example  Dockerfile  main.py  pyproject.toml
apps/core-service/src/: __init__.py  config.py  database.py  main.py
apps/core-service/src/clients/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
apps/core-service/src/common/: dependencies.py  exceptions.py  health.py  logging.py  validators.py
apps/core-service/src/dashboard/: __init__.py  router.py  schemas.py  service.py
apps/core-service/src/milestones/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
apps/core-service/src/organizations/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
apps/core-service/src/projects/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
apps/core-service/src/tasks/: __init__.py  assignments_router.py  comments_router.py  dependencies_router.py  models.py  repository.py  router.py  schemas.py  service.py
apps/core-service/src/users/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
apps/core-service/tests/: conftest.py  factories.py
apps/core-service/tests/integration/: test_projects_api.py  test_task_relations_api.py  test_tasks_api.py
apps/core-service/tests/unit/: test_validators.py
apps/notification-service/: .env.example  Dockerfile  go.mod  go.sum  main.go
apps/notification-service/internal/config/: config.go
apps/notification-service/internal/handler/: notifications.go  webhooks.go
apps/web/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.ts
apps/web/src/: App.tsx
infrastructure/terraform/: README.md  backend.tf  versions.tf
migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql  000002_projects_tasks.down.sql  000002_projects_tasks.up.sql  000003_enable_rls.down.sql  000003_enable_rls.up.sql  000004_documents_rag.down.sql  000004_documents_rag.up.sql  000005_notifications.down.sql  000005_notifications.up.sql  000006_audit_log.down.sql  000006_audit_log.up.sql  000007_add_budget_to_projects.down.sql  000007_add_budget_to_projects.up.sql  000008_align_ai_service_models.down.sql  000008_align_ai_service_models.up.sql  README.md
scripts/: e2e-test.sh  grant-vm-permissions.sh  run-migrations-cloudshell.sh
(+117 files in other folders)
